@@ -144,18 +144,12 @@ QSize MainWidget::sizeHint() const
 
 void MainWidget::cartClickedData(const QModelIndex &index)
 {
-#ifdef ALSA
-  if(main_stream_player->state()==StreamPlayer::Playing) {
-    main_stream_player->stop();
-  }
-#else
   if((main_stream_player->state()==StreamPlayer::Playing)&&
      (main_library_model->cartNumber(index.row())!=main_selected_cart)) {
     main_stream_player->
       play(main_library_model->cartNumber(index.row()),1,-1,-1);
     main_selected_cart=main_library_model->cartNumber(index.row());
   }
-#endif  // ALSA
 }
 
 
